--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="firstYearReflection.html">First Year Reflection</a></li>
         </ul>
     </nav>
-    <div class="welcome">
+    <div class="title">
         <h1>WELCOME!</h1>
       </div>
   </div>
