--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="2004908.jpg">
     <div class="about-text">
         <h1>Jackie Beng</h1>
-        <h3>Undergraduate Student | University of Washington</h3>
+        <h3>Business (Information Systems) & Informatics (SWE) | University of Washington</h3>
         <p> Hello,<br>
             I am from Seattle, WA, and I am currently a freshman at the University of Washington, Foster School of Business, majoring in Information Systems and planning to double in Informatics with a software development track. My passion for technology and business has driven me to pursue a career in both software engineering and product management. <br><br>
             
