--- a/Mission.html
+++ b/Mission.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mission</title>
+    <title>MISSION </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://kit.fontawesome.com/9fcd539bc3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>PAGE AINT READY</h1>
-    <a href="index.html">GO BACK</a>
+  <div class="hero2" data-aos="fade-in">
+    <nav>
+        <a href="index.html"><img id="CB" src="logo2.png"></a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Mission.html">Mission</a></li>
+            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="Professional.html">Professional</a></li>
+            <li><a href="firstYearReflection.html">First Year Reflection</a></li>
+        </ul>
+    </nav>
+    <div class="title" data-aos="slide-up">
+        <h1>MISSION</h1>
+      </div>
+  </div>
+  <section class="Mission-statement">
+    <div class="mission" data-aos="fade-in">
+        <h4>"INSERT MY MISSION STATEMEMT"</h4>
+    </div>
+</section>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+        AOS.init();
+        </script>
 </body>
 </html>
