--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackie Beng EDUC 300 Portfolio </title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://kit.fontawesome.com/9fcd539bc3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="hero">
+  <div class="hero" data-aos="fade-in">
     <nav>
-        <img id="CB" src="logo2.png">
+        <a href="index.html"><img id="CB" src="logo2.png"></a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Mission.html">Mission</a></li>
@@ -20,13 +22,13 @@
             <li><a href="firstYearReflection.html">First Year Reflection</a></li>
         </ul>
     </nav>
-    <div class="title">
-        <h1>WELCOME!</h1>
+    <div class="title" data-aos="slide-up">
+        <h1>WELCOME</h1>
       </div>
   </div>
 
 <section class="about">
-    <div class="main">
+    <div class="main" data-aos="fade-in">
         <img src="2004908.jpg">
     <div class="about-text">
         <h1>Jackie Beng</h1>
@@ -43,7 +45,20 @@
         </div>
     </div>
 </section>
-   
 
+<footer>
+    <div class="footer" data-aos="fade-in">
+        <ul>
+            <li><a href="https://www.linkedin.com/in/jackiebeng/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/jackiebeng/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com/@jackiebeng" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://open.spotify.com/user/realjbe025?si=392d05c33b5f4a67" target="_blank"><i class="fa-brands fa-spotify"></i></a></li>
+        </ul>
+    </div>
+</footer>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+        AOS.init();
+        </script>
 </body>
 </html>
