--- a/Mission.html
+++ b/Mission.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Mission.html">Mission</a></li>
-            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="Projects.html">Projects</a></li>-
             <li><a href="Professional.html">Professional</a></li>
             <li><a href="firstYearReflection.html">First Year Reflection</a></li>
         </ul>
@@ -26,10 +26,43 @@
       </div>
   </div>
   <section class="Mission-statement">
+
     <div class="mission" data-aos="fade-in">
-        <h4>"INSERT MY MISSION STATEMEMT"</h4>
+        <h3>"To strive for growth and fulfillment in all aspects of life, while also using my strengths, skills and passions to positively impact those around me."</h3>
+    </div>
+
+    <div class="personalValueTitle" data-aos="slide-up">
+        <h2>Personal Values</h2>
+    </div>
+
+    <div class = "personalValues"  data-aos="slide-up">
+        <div class="row">
+            <div class="card">
+                <img src="dudeOnLaptopEmoji.png">
+                <h4>Independence / Personal Growth</h4>
+                <p>I always strive to always improve myself. Weather that is hobbies such as Music (Drumming, Piano, bass & Guitar), physical (Gym, Snowboarding, Rock climbing & Tennis), Media (Photography & Film making) to knowledge and skills, personal growth in any aspect is important to me. I always wanna be a better version of myself without losing my true self. But I also strive to be independent. At the end of the day, the only person that has your back is you.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="card">
+                <img src="peopleEmoji.jpg">
+                <h4>Relations / Dependability</h4>
+                <p>As much as I strive to be independent, I also seek high-quality friendships and relationships. This would lead to supporting one another. I love to help others with anything I possibly can, whether that is helping people younger than me with UW wisdom to more complex things, supporting others, and having good relations with people is something I value as well as the people I’ve met knowing they have someone dependable to go to is something I strive to be.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="card">
+                <img src="handshakeEmoji.jpg">
+                <h4>Gratitude / Empathy</h4>
+                <p>I’m very thankful for all the opportunities and challenges that are presented to me. I also express this by making sure to say please and thank you to those who have helped me in any way. But I also value trying to understand others, from joy to sadness. Both of these will not only help lead me to create positive impacts on those I’ve met but also help improve my over all well-being in the process.</p>
+            </div>
+        </div>
     </div>
 </section>
+
+    <div class="purposeDiagram"></div>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
         AOS.init();
