--- a/Professional.html
+++ b/Professional.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mission</title>
+    <title>Professional</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://kit.fontawesome.com/9fcd539bc3.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>PAGE AINT READY</h1>
-    <a href="index.html">GO BACK</a>
+    <div class="hero4" data-aos="fade-in">
+        <nav>
+            <a href="index.html"><img id="CB" src="logo2.png"></a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Mission.html">Mission</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Professional.html">Professional</a></li>
+                <li><a href="firstYearReflection.html">First Year Reflection</a></li>
+            </ul>
+        </nav>
+        <div class="title4" data-aos="slide-up">
+            <h1>PROFESSIONAL</h1>
+          </div>
+      </div>
+
+      <div class="PathwayU">
+        <h2 data-aos="slide-up">Pathways U Reflection</h2>
+        <div class="PathwayU" data-aos="slide-up">
+            <img src="alki.jpg"></a>
+            <p data-aos="fade-in">
+                For my Pathway U assessment, the result surprisingly matched my values and ideals, although there were some parts where it didn’t match me too well; overall, it did a  pretty good job. For interest, my primary career interests are ‘Enterprising’ and ‘Conventional.’ For my values, I got ‘Achievement’ and ‘Independence.’ For personality, my highest scores are: ‘Open to Experience,’ ‘Conscientiousness,’ and ‘Honesty.’ Lastly, my workplace preferences are ‘Recognition’ and ‘Collaboration.’ <br><br>
+
+                As I mentioned previously, my results are pretty accurate. Enterprising means go-getter, leading people, decision maker and lead and action-oriented. I often find myself leading group projects and making group decisions a lot which reflected that pretty well. For conventional, it means detailed oriented and procedure. I would say I like a set of guidelines, but I can always work around problems and accommodate when need to.<br><br>
+
+                As I mention in the ‘Missions’ tab, personal growth and achievement are my personal values. Sense of accomplishment is rewarding as you have a sense of accomplishment. Independence: I like to also work at my own pace as well in my own space where I have everything  I need for workflow.<br><br>
+
+                I’m always open to trying new things. Like this past year, I started snowboarding and rock climbing, and who knows what else to come. Conscientious, my peers also see me as organized and disciplined. The test also reported me as honest. I know people also see me as genuine, but hopefully, that carries to the new people I meet.<br><br>
+
+                Last but not least is workplace preference. I love recognition. Whether recognizing others or getting recognized, it is always nice to hear words of affirmation in and outside the workplace.<br><br>
+	
+                As someone still uncertain about my career path, these results will help me dive deeper into what I really want to do as a person.
+
+
+            </p>
+        </div>
+
+      </div>
+
+
+
+
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
