--- a/firstYearReflection.html
+++ b/firstYearReflection.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>PAGE AINT READY</h1>
+        <h3>Heres a picture of Paul tho</h3>
+        <img src="paul.jpeg"> <br>
     <a href="index.html">GO BACK</a>
 </body>
 </html>
