--- a/Projects.html
+++ b/Projects.html
@@ -30,13 +30,13 @@
         <h2 data-aos="slide-up">Oral History PROJECT</h2>
         <div class="Projectsitems" data-aos="slide-up">
             <a href="https://express.adobe.com/page/zR90CacJU9pQD/" target="_blank"><img src="kerryPark.jpg"></a>
-            <h4>CLICK THE IMAGE TO GO PROJECT</h4> 
+            <h4>CLICK THE IMAGE TO GO TO PROJECT</h4> 
             <p data-aos="slide-up">While interviewing my mom, I learned even more about my mom than I thought I had known before. Adding on to what I knew before, I knew that life was hard. She was born around the time the Vietnam War was wrapping up. They were transferred to a new government which is not only communist, but they were much more strict than the “Republic of Vietnam” I learned that although opportunities were in front of her, it was blocked by other factors that were out of her control, such as family problems, war, finance and such. This made me think and realize that I am very fortunate for the opportunities I am given right now, like going to the top school in your state, having a house with both parents, decent finance, and access to many resources that my parents did not have when they were my age. That also tells me to work hard so I can enjoy my life but also pay them back when I get the chance. Although I do not fully agree that family comes first because God should be rather than yourself, then, of course, your family, I think that family is still a top priority.</p>
 
             <h2 data-aos="slide-up">Sense of Belonging Video</h2>
             <div class="Projectsitems" data-aos="slide-up">
                 <a href="https://www.youtube.com/watch?v=mAmbk5Y9EdE&t=12s" target="_blank"><img src="thumbnail.jpg"></a>
-                <h4>CLICK THE IMAGE TO GO PROJECT</h4> 
+                <h4>CLICK THE IMAGE TO GO TO PROJECT</h4> 
                 <p data-aos="slide-up"data-aos="slide-up">As the director, scriptwriter, videographer, and editor of our project, my main contribution was incorporating my personal experiences and those of my group members into the script. During the scriptwriting process, I shared my story of arriving at UW and asked my group members to share theirs. Through this collaboration, we discovered that everyone experiences imposter syndrome when they first arrive at UW, but we all have unique experiences with finding our community.
                     The main character in our video, Parker, arrived at UW with high expectations of meeting people with similar interests but finding that people can be cold and unwelcoming. Like Parker, I struggled with isolation and found that it affected my grades. It wasn't until I took responsibility for my academic success and joined a tutoring group that I met others who were also struggling. We connected over lunch and hung out in a common space, Foster, where Parker sees me alone and decides to break the "Seattle freeze" by introducing himself.
                     My perception of belonging is that it's often up to us to find our community through various opportunities, such as clubs and RSOs. However, I understand that the demands of school can make it challenging to participate.</p>
