--- a/Professional.html
+++ b/Professional.html
@@ -30,7 +30,7 @@
       <div class="PathwayU">
         <h2 data-aos="slide-up">Pathways U Reflection</h2>
         <div class="PathwayU" data-aos="slide-up">
-            <img src="alki.jpg"></a>
+            <img src="Foster.jpg"></a>
             <p data-aos="fade-in">
                 For my Pathway U assessment, the result surprisingly matched my values and ideals, although there were some parts where it didn’t match me too well; overall, it did a  pretty good job. For interest, my primary career interests are ‘Enterprising’ and ‘Conventional.’ For my values, I got ‘Achievement’ and ‘Independence.’ For personality, my highest scores are: ‘Open to Experience,’ ‘Conscientiousness,’ and ‘Honesty.’ Lastly, my workplace preferences are ‘Recognition’ and ‘Collaboration.’ <br><br>
 
@@ -43,12 +43,28 @@
                 Last but not least is workplace preference. I love recognition. Whether recognizing others or getting recognized, it is always nice to hear words of affirmation in and outside the workplace.<br><br>
 	
                 As someone still uncertain about my career path, these results will help me dive deeper into what I really want to do as a person.
-
-
             </p>
         </div>
-
       </div>
+
+      <div class="resume">
+        <h2 data-aos="slide-up">resume</h2>
+        <div class="pdf" data-aos="fade-in">
+            <center>
+               <embed src="JB_SWE_Resume_2023.pdf" width="55%" height="1230px"> 
+            </center>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footerP" data-aos="fade-in">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/jackiebeng/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://uw.joinhandshake.com/stu/users/41537786" target="_blank"><i class="fa-regular fa-handshake"></i></a></li>
+            </ul>
+        </div>
+    </footer>
+      
 
 
 
