--- a/Mission.html
+++ b/Mission.html
@@ -56,13 +56,36 @@
             <div class="card">
                 <img src="handshakeEmoji.jpg">
                 <h4>Gratitude / Empathy</h4>
-                <p>I’m very thankful for all the opportunities and challenges that are presented to me. I also express this by making sure to say please and thank you to those who have helped me in any way. But I also value trying to understand others, from joy to sadness. Both of these will not only help lead me to create positive impacts on those I’ve met but also help improve my over all well-being in the process.</p>
+                <p>I am very thankful for all the opportunities and challenges that are presented to me. I also express this by making sure to say please and thank you to those who have helped me in along the way. But I also value trying to understand others, from happy moments to sad moment. Both of these will not only help lead me to create positive impacts on those I have met but also, this has help improve my over all well-being in the process.</p>
             </div>
         </div>
     </div>
 </section>
 
-    <div class="purposeDiagram"></div>
+<div class="PurposeDiagram">
+    <h2 data-aos="slide-up">Ikigai Diagram</h2>
+    <img src="PurposeDiagram.jpg" data-aos="fade-in">
+    <p data-aos="slide-up">To start, I feel like these are meant to change over time. But identifying something is better than nothing. As of April 2023, here is what I have for my Ikigai diagram.<br><br>
+
+        For what I love, I love music, making content, the outdoors, tech, money, and making meaningful connections. For what I am good at, I would say I'm good at musical instruments, photography, time management, and being organized, whether that is digitally or in real life. This also leads to what I can get paid to do: tech-related jobs, leadership and management roles, creating media, designing, and, of course, business related. Last but not least, What does the world need? I think the world needs better access/help with mental health, the environment, and of course, equality.<br><br>
+    
+        What do all of these have in common? They all have arts, tech, and business-related topics. This also made me question what I want to do moving forward. These allowed me to see what interests me and what I can gear my work and passion toward while also having topics in the world that can be improved, such as mental health. With this information, I can also better understand how I can combine "My strengths, Skills, and Passion to positively impact those around me."
+    </p>
+    
+</div>
+
+<footer>
+    <div class="footer" data-aos="fade-in">
+        <ul>
+            <li><a href="https://www.linkedin.com/in/jackiebeng/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/jackiebeng/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com/@jackiebeng" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://open.spotify.com/user/realjbe025?si=392d05c33b5f4a67" target="_blank"><i class="fa-brands fa-spotify"></i></a></li>
+        </ul>
+    </div>
+</footer>
+
+
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
         AOS.init();
