--- a/firstYearReflection.html
+++ b/firstYearReflection.html
@@ -64,7 +64,7 @@
                 <p>I attended my first ever hackathon hosted by UW called DUBHacks.
                     It was kinda stressful but overall had a lot of fun and experience a lot of new things.
                     Most stressful part was trying to learn a whole new technology / database (Mongo DB) within less then 24 hours which is no way possible.
-                    It was also harder as I have not been coding since May 2021 so it was a challenge.
+                    It was also harder as I have not been coding since May 2021 so it was a challenge. Funny that I said I will never code another day in my life but here I am making this website from scratch.
                     This was also the start of my transition from Business going back into tech / software / coding.
                 </p>
             </div>
