--- a/Mission.html
+++ b/Mission.html
@@ -40,7 +40,7 @@
             <div class="card">
                 <img src="dudeOnLaptopEmoji.png">
                 <h4>Independence / Personal Growth</h4>
-                <p>I always strive to always improve myself. Weather that is hobbies such as Music (Drumming, Piano, bass & Guitar), physical (Gym, Snowboarding, Rock climbing & Tennis), Media (Photography & Film making) to knowledge and skills, personal growth in any aspect is important to me. I always wanna be a better version of myself without losing my true self. But I also strive to be independent. At the end of the day, the only person that has your back is you.</p>
+                <p>I always strive to always improve myself. Whether this through Music (Drumming, Piano, Bass & Guitar), Exercise (Gym, Snowboarding, Rock Climbing & Tennis), Media (Photography & Film Making) or knowledge and skills, personal growth in any aspect is important to me. I always want to be a better version of myself without losing my true self. With that being said, I also strive to be independent. At the end of the day, the only person that has your back is you.</p>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
             <div class="card">
                 <img src="peopleEmoji.jpg">
                 <h4>Relations / Dependability</h4>
-                <p>As much as I strive to be independent, I also seek high-quality friendships and relationships. This would lead to supporting one another. I love to help others with anything I possibly can, whether that is helping people younger than me with UW wisdom to more complex things, supporting others, and having good relations with people is something I value as well as the people I’ve met knowing they have someone dependable to go to is something I strive to be.</p>
+                <p>As much as I strive to be independent, I also seek high-quality friendships and menaingful relationships. This includes supporting one another. I love to help others in any way that I can, whether that is through helping people younger than me with UW wisdom to more complex things, supporting other and having good relations with others is something I value. I strive to have a legacy of dependability and reliability to those who know me.</p>
             </div>
         </div>
 
@@ -56,7 +56,7 @@
             <div class="card">
                 <img src="handshakeEmoji.jpg">
                 <h4>Gratitude / Empathy</h4>
-                <p>I am very thankful for all the opportunities and challenges that are presented to me. I also express this by making sure to say please and thank you to those who have helped me in along the way. But I also value trying to understand others, from happy moments to sad moment. Both of these will not only help lead me to create positive impacts on those I have met but also, this has help improve my over all well-being in the process.</p>
+                <p>I am very thankful for all the opportunities and challenges that are presented to me. I also express this by making sure to say please and thank you to those who have helped me in along the way. But I also value trying to understand others, from happy moments to sad moment. Both of these will not only help lead me to create positive impacts on those I have met but also, this has help improve my overall well-being in the process.</p>
             </div>
         </div>
     </div>
@@ -69,7 +69,7 @@
 
         For what I love, I love music, making content, the outdoors, tech, money, and making meaningful connections. For what I am good at, I would say I'm good at musical instruments, photography, time management, and being organized, whether that is digitally or in real life. This also leads to what I can get paid to do: tech-related jobs, leadership and management roles, creating media, designing, and, of course, business related. Last but not least, What does the world need? I think the world needs better access/help with mental health, the environment, and of course, equality.<br><br>
     
-        What do all of these have in common? They all have arts, tech, and business-related topics. This also made me question what I want to do moving forward. These allowed me to see what interests me and what I can gear my work and passion toward while also having topics in the world that can be improved, such as mental health. With this information, I can also better understand how I can combine "My strengths, Skills, and Passion to positively impact those around me."
+        What do all of these have in common? They all have arts, tech, and business-related topics. This has made me question what I want to do moving forward. These allowed me to see what interests me and what I can gear my work and passion toward while also having topics in the world that can be improved, such as mental health. With this information, I can also better understand how I can combine "My strengths, Skills, and Passion to positively impact those around me."
     </p>
     
 </div>
