--- a/firstYearReflection.html
+++ b/firstYearReflection.html
@@ -31,13 +31,13 @@
         <div class="BiReflection" data-aos="slide-up">
             <img src="Bi.png"></a>
             <p data-aos="fade-in">
-                I remember when I first got the invitation to sign up for the Bi around May of 2022, I thought to myself, what even is this? Until I heard some of my high school friends signing up, I thought this might be a great way to meet people and grow connections. Who would’ve thought that the Bi has made such a significant impact on my first year here at UW.<br><br>
+                I remember when I first got the invitation to sign up for the Bi around May of 2022, I thought to myself, what even is this? I heard some of my high school friends were signing up, and I thought that this could be a great way to meet people and grow connections. Who would’ve thought that the BI has made such a significant impact on my first year here at UW?<br><br>
 
-                So what does Bi mean to me? Bi means a sense of community for underrepresented men of color at UW. Bi means nothing like its name, which sounds like a frat or Greek life. Bi also means a place to get help to navigate UW as well as opportunities to meet previous cohorts all the way to the CEO of a billion-dollar company. <br><br>
+                So what does BI mean to me? BI means a sense of community for underrepresented men of color at UW. BI means nothing like its name, which sounds like a frat or Greek life. BI is also a place to get help to navigate college as well as gaining opportunities to meet previous cohorts all the way to the CEO of a billion-dollar company. <br><br>
 
-                To me, Bi has honestly made up a good chunk of my first year at UW. I would honestly feel even more lonely if I wasn’t in Bi. Bi has brought me a sense of community and a community full of people of color. Which also seg-ways towards how Bi is important for learning. For starters, I really appreciate the faculty constantly checking in with you to see how you are doing personally and academically. I feel like these small things have a significant impact on learning as you kinda have a sense of someone caring for your academic success. But not only that, but having a support system and a team to go to when you're struggling in any part of UW is nice. I know for sure that when I have problems with my schedule and financial aid, I will be at Paul’s office because he just knows what to do. <br><br>
+                To me, BI has honestly made up a good chunk of my first year at UW. I would honestly feel even more lonely if I wasn’t in BI. BI has brought me a sense of community - one that is full of people of color, bringing unique ideas, diversity, and belonging. This also segways towards how BI is important for learning. For starters, I really appreciate how the faculty constantly checks in with you to see how you are doing personally and academically. I feel like these small things have had a significant impact on learning as you kind of have a sense of someone caring for your academic success. But not only that, but having a support system and a team to go to when you're struggling in any part of UW is nice. I know for sure that when I have had problems with my schedule and financial aid, I would go to Paul’s office because he would know exactly what to do. <br><br>
 
-                What advice would I give to future Bi scholars to make the most out of their Bi experience? Go to events, get to know the faculty as if they are your friends, and chill around at The Brooklyn Trails building; not only will you meet other members, but you also have the chance to hang out with faculty. And don’t be afraid to go to them; the only thing they want from you is to succeed! 
+                What advice would I give to future BI scholars to make the most out of their BI experience? Go to events, get to know the faculty as if they are your friends, and chill around at The Brooklyn Trails building; not only will you meet other members, but you also have the chance to hang out with faculty. Finally don’t be afraid to go to them; the only thing they want is for you to succeed! 
 
             </p>
         </div>
@@ -52,7 +52,7 @@
             <img src="IMG1.JPG">
             <div class="photoRightText">
                 <h3>09.2022</h3>
-                <p>My worship band "Unity Worship" from Vietnamese Martyrs Parish, Tukwila, WA; Although not from school, this band had helped me grow a lot in music and 'almost' family like group.</p>
+                <p>My worship band "Unity Worship" from Vietnamese Martyrs Parish, Tukwila, WA; Although not from school, this band had helped me grow a lot in music, but also has allowed me to build connections in this 'almost' family-like group.</p>
             </div>
         </div>
 
@@ -62,10 +62,10 @@
             <div class="photoCenterText">
                 <h3>10.22.2022</h3>
                 <p>I attended my first ever hackathon hosted by UW called DUBHacks.
-                    It was kinda stressful but overall had a lot of fun and experience a lot of new things.
-                    Most stressful part was trying to learn a whole new technology / database (Mongo DB) within less then 24 hours which is no way possible.
-                    It was also harder as I have not been coding since May 2021 so it was a challenge. Funny that I said I will never code another day in my life but here I am making this website from scratch.
-                    This was also the start of my transition from Business going back into tech / software / coding.
+                    It was kinda stressful but overall, I had a lot of fun and experienced a lot of new things.
+                    The most stressful part was trying to learn a whole new technology / database (Mongo DB) within less then 24 hours which is, in no way possible.
+                    It was also harder as I had not been coding since May 2021, so I had to get used to the mechanisms again. Funny that I said I will never code another day in my life but here I am making this website from scratch.
+                    This was also the start of my transition from Business back into tech / software / coding.
                 </p>
             </div>
         </div>
@@ -75,12 +75,12 @@
             <img src="IMG3b.JPG" class="rightGui">
             <div class="photoCenterText">
                 <h3>12.2022</h3>
-                <p>I kinda wanna combine these 2 categories but; part of my first year was also thanks to me living on campus. If I didn't live on campus, I would probably feel even more lonely. Living on campus also gave me the chance to meet a lot of people. 
-                    Although I'm not too close with my roomates, they have also made a part of my first year here at UW. We pretty much suffer the harsh reality of first year of college together. <br><br>
+                <p>I kinda wanna combine these 2 categories but; many of my memories during first year were also thanks to me living on campus. If I didn't live on campus, I would probably feel even more lonely. Living on campus gave me the chance to meet a lot of people. 
+                    Although I'm not too close with my roomates, they have also made a part of my first year here at UW. We pretty much suffered the harsh reality of first year of college together. <br><br>
 
-                    On the left picture, you can see my dorm set up. I live in Mccarty hall and I made this place that suites my productivity needs. And also some K-pop posters... <br><br>
+                    On the left picture, you can see my dorm set up. I live in McCarty hall and I designed this place to suites my productivity needs. And also some K-pop posters... <br><br>
 
-                    This past academic year has also been a year of growth in my hobbies. I started taking Piano more seriously (Mar, 2022), I started Bass (Dec 2022) and Guitar (Jan 2023). I also started some other hobbies which I will get into later.
+                    This past academic year has also been a year of growth in my hobbies. I started taking Piano more seriously (Mar, 2022), I started playing the Bass (Dec 2022) and Guitar (Jan 2023). I also started some other hobbies which I will get into later.
                 </p>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <h3>02.2022</h3>
                 <p>
                     This year, I also started bouldering again. It's been a very long time since I bouldered so I'll consider it my first.
-                    I really enjoy the problem solving aspect of it and it feels really rewarding once you finish a level.
+                    I really enjoy the problem solving aspect of it, and it feels really rewarding once you finish a level.
                 </p>
                
             </div>
@@ -114,7 +114,7 @@
             <div class="photoLeftTextImg6">
                 <h3>01.28.2022</h3>
                 <p>
-                    I'm not to much of a party person but this one night, me and another friend was called to rescue another friend from a party. It was like 1 in the morning and me and my friend we're party hoping just to find our other friend. What an experience...
+                    I'm not to much of a party person but this one night, me and another friend were called to rescue another friend from a party. It was like 1 in the morning and me and my friend were party hopping just to find our other friend. What an experience...
                 </p>
             </div>
         </div>
@@ -123,8 +123,8 @@
             <img src="IMG7.JPG">
             <div class="photoRightText">
                 <h3>02.11.2023</h3>
-                <p>Another not from school artifact, this is 5th grade for Giao Ly (Bible Study) the grade I teach. My team has also made up the whole experience. We work really well together. <br><br>
-                In the photo, we asked our students to draw us catechist. Here were the results...
+                <p>Another not from school artifact, this is 5th grade for Giao Ly (Bible Study), the grade I teach. My team has also made up the whole experience. We work really well together. <br><br>
+                In the photo, we asked our students to draw us catechists. Here were the results...
                 </p>
             </div>
         </div>
@@ -146,7 +146,7 @@
             <div class="photoRightText">
                 <h3>03.19.2023</h3>
                 <p>
-                    By this point I have already been snowboarding for at least 5 times and gotten way better. This was when me and a couple of friends went to Crystal Mountain Ski Resort over spring break.
+                    By this point I had already been snowboarding at least 5 times and had gotten way better. This was when me and a couple of friends went to Crystal Mountain Ski Resort over spring break.
                 </p>
             </div>
         </div>
@@ -156,7 +156,7 @@
             <img src="IMG9b.png" class="rightOlympic">
             <div class="photoCenterText">
                 <h3>03.23.2023</h3>
-                <p>Randomly during spring break, one of my friends asks me if I wanted to help him with photographing him fishing. This was the first ever time that I have ever taken photos in water or on water.
+                <p>Randomly during spring break, one of my friends asked me if I wanted to help him with photographing him fishing. This was the first ever time that I had ever taken photos in water or on water.
                     While at it, we completed the Olympic Loop road trip which loops around Olympic National Park.<br><br>
                     <a href="https://www.youtube.com/watch?v=aLxYxfzsg8I" target="_blank">Click here to watch our mini vlog on our trip.</a>
                  </p>
@@ -169,8 +169,8 @@
             <div class="photoRightTextJim">
                 <h3>03.31.2023</h3>
                 <p>
-                    On March 31, some memembers of the Bi had the chance to have a lunch chat with Jim Sinegal, Costco's co founder.
-                    Mr. Sinegal was such an amazing guy to talk to and gave us many life and business wisdom. Really great oppertunity to talk to him!
+                    On March 31, some memembers of the BI had the chance to have a lunch chat with Jim Sinegal, Costco's co-founder.
+                    Mr. Sinegal was such an amazing guy to talk to and gave us valuable advice on life and business. Really great oppertunity to talk to him!
                 </p>
             </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="photoCenterText">
                 <h3>04.2023</h3>
                 <p>
-                    In addition to living on campus and dorming, another part of my first year is hanging out with these people after school and classes. It's so nice to just be able to hang out with friends and go to each others dorm, hangout, talk and study together.
+                    In addition to living on campus and dorming, another part of my first year is hanging out with these people after school and classes. It's so nice to just be able to hang out with friends and go to each others' dorm, hangout, talk, and study together.
                     Seeing your friends work through homework and stuff also pushes you / motivates to work and study hard as well.
                     I'll probably miss this the most when I commute next year. 
                 </p>
@@ -195,13 +195,13 @@
                 <h3>05.02.2023</h3>
                 <p>
                     BONUS: Probably most interesting thing that happened in the dorms 
-
+x
                 </p>
             </div>
         </div>
 
         <div class="endingLine">
-            <h2 data-aos="slide-up">This is just few of many photos from my first year :)</h2>
+            <h2 data-aos="slide-up">These are just few of many photos from my first year :)</h2>
         </div>
 
         <footer>
