--- a/Mission.html
+++ b/Mission.html
@@ -40,7 +40,7 @@
             <div class="card">
                 <img src="dudeOnLaptopEmoji.png">
                 <h4>Independence / Personal Growth</h4>
-                <p>I always strive to always improve myself. Whether this through Music (Drumming, Piano, Bass & Guitar), Exercise (Gym, Snowboarding, Rock Climbing & Tennis), Media (Photography & Film Making) or knowledge and skills, personal growth in any aspect is important to me. I always want to be a better version of myself without losing my true self. With that being said, I also strive to be independent. At the end of the day, the only person that has your back is you.</p>
+                <p>I always strive to always improve myself. Whether this through Music (Drumming, Piano, Bass & Guitar), physical activities (Gym, Snowboarding, Rock Climbing & Tennis), Media (Photography & Film Making) or knowledge and skills, personal growth in any aspect is important to me. I always want to be a better version of myself without losing my true self. With that being said, I also strive to be independent. At the end of the day, the only person that has your back is you.</p>
             </div>
         </div>
 
