--- a/Projects.html
+++ b/Projects.html
@@ -39,7 +39,7 @@
                 <h4>CLICK THE IMAGE TO GO TO PROJECT</h4> 
                 <p data-aos="slide-up">As the director, scriptwriter, videographer, and editor of our project, my main contribution was incorporating my personal experiences and those of my group members into the script. During the scriptwriting process, I shared my story of arriving at UW and asked my group members to share theirs. Through this collaboration, we discovered that everyone experiences imposter syndrome when they first arrive at UW, but we all have unique experiences with finding our community.
                     The main character in our video, Parker, arrived at UW with high expectations of meeting people with similar interests but finding that people can be cold and unwelcoming. Like Parker, I struggled with isolation and found that it affected my grades. It wasn't until I took responsibility for my academic success and joined a tutoring group that I met others who were also struggling. We connected over school work and worked together on assignments and projects.
-                    My perception of belonging is that it's often up to us to find our community through various opportunities, such as clubs and RSOs and also finding people that match our interest and values. However, I understand that the demands of school can make it challenging to participate.</p>
+                    My perception of belonging is that it's often up to us to find our community through various opportunities, such as clubs and RSOs and also finding people that match our interest and values. However, I understand that the demands of school can make it challenging.</p>
     
 
         </div>
