another commit for grammer tf

--- a/Mission.html
+++ b/Mission.html
@@ -48,7 +48,7 @@
             <div class="card">
                 <img src="peopleEmoji.jpg">
                 <h4>Relations / Dependability</h4>
-                <p>As much as I strive to be independent, I also seek high-quality friendships and menaingful relationships. This includes supporting one another. I love to help others in any way that I can, whether that is through helping people younger than me with UW wisdom to more complex things, supporting other and having good relations with others is something I value. I strive to have a legacy of dependability and reliability to those who know me.</p>
+                <p>Although I aim to be independent, I also seek high-quality friendships and menaingful relationships. This includes supporting one another. I love to help others in any way that I can, whether that is through helping people younger than me with UW advice to more complex things, supporting other and having good relations with others is something I value. I strive to have a legacy of dependability and reliability to those who know me.</p>
             </div>
         </div>
 
@@ -65,7 +65,7 @@
 <div class="PurposeDiagram">
     <h2 data-aos="slide-up">Ikigai Diagram</h2>
     <img src="PurposeDiagram.jpg" data-aos="fade-in">
-    <p data-aos="slide-up">To start, I feel like these are meant to change over time. But identifying something is better than nothing. As of April 2023, here is what I have for my Ikigai diagram.<br><br>
+    <p data-aos="slide-up">Naturally, these will change over time, but as of April 2023, here is what I have for my Ikigai diagram. But identifying something is better than nothing.<br><br>
 
         For what I love, I love music, making content, the outdoors, tech, money, and making meaningful connections. For what I am good at, I would say I'm good at musical instruments, photography, time management, and being organized, whether that is digitally or in real life. This also leads to what I can get paid to do: tech-related jobs, leadership and management roles, creating media, designing, and, of course, business related. Last but not least, What does the world need? I think the world needs better access/help with mental health, the environment, and of course, equality.<br><br>
     
